--- a/OrdersApplication/package.json
+++ b/OrdersApplication/package.json
@@ -4,7 +4,7 @@
   "description": "Practical assignment",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "nodemon server.ts",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,10 +14,14 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.25",
     "nodemon": "^2.0.7",
+    "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
 }
