--- a/PaymentsApplication/package.json
+++ b/PaymentsApplication/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "orders-application",
+  "name": "payments-application",
   "version": "1.0.0",
   "description": "Practical assignment",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "nodemon server.ts",
     "build": "tsc --project ./",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/unit-test.ts"
   },
   "author": "Ali Bazdaran",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "chai": "^4.3.0",
+    "express": "^4.17.1",
+    "mocha": "^8.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.25",
     "nodemon": "^2.0.7",
+    "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
 }
