--- a/OrdersApplication/package.json
+++ b/OrdersApplication/package.json
@@ -6,12 +6,18 @@
   "scripts": {
     "start": "nodemon server.ts",
     "build": "tsc --project ./",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/**/*.ts"
   },
   "author": "Ali Bazdaran",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@types/mssql": "^6.0.7",
+    "chai": "^4.3.0",
+    "express": "^4.17.1",
+    "mocha": "^8.2.1",
+    "mssql": "^6.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
