--- a/PaymentsApplication/tsconfig.json
+++ b/PaymentsApplication/tsconfig.json
@@ -11,5 +11,10 @@
       "esModuleInterop": true,
       "strict": true,
       "resolveJsonModule": true,
-    }
+    },
+    "exclude": [
+      "./tests/",
+      "./node_modules/",
+      "./dist/"
+    ],
 }
