--- a/OrdersApp/package.json
+++ b/OrdersApp/package.json
@@ -16,6 +16,7 @@
     "@types/mssql": "^6.0.7",
     "chai": "^4.3.0",
     "express": "^4.17.1",
+    "guid-typescript": "^1.0.9",
     "mocha": "^8.2.1",
     "mssql": "^6.3.1"
   },
