--- a/OrdersApp/tsconfig.json
+++ b/OrdersApp/tsconfig.json
@@ -11,5 +11,6 @@
       "esModuleInterop": true,
       "strict": true,
       "resolveJsonModule": true,
+      "strictPropertyInitialization": false
     }
 }
