--- a/OrdersApp/package.json
+++ b/OrdersApp/package.json
@@ -11,9 +11,12 @@
   "author": "Ali Bazdaran",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/mssql": "^6.0.7",
+    "awilix": "^4.3.1",
+    "body-parser": "^1.19.0",
     "chai": "^4.3.0",
     "express": "^4.17.1",
     "guid-typescript": "^1.0.9",
