--- a/OrdersApp/package.json
+++ b/OrdersApp/package.json
@@ -15,13 +15,15 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/mssql": "^6.0.7",
+    "@types/sinon": "^9.0.10",
     "awilix": "^4.3.1",
     "body-parser": "^1.19.0",
     "chai": "^4.3.0",
     "express": "^4.17.1",
     "guid-typescript": "^1.0.9",
     "mocha": "^8.2.1",
-    "mssql": "^6.3.1"
+    "mssql": "^6.3.1",
+    "sinon": "^9.2.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
