ordersApp: process payment

--- a/OrdersApp/config.json
+++ b/OrdersApp/config.json
@@ -9,5 +9,6 @@
             "encrypt": true,
             "enableArithAbort": true
         }
-    }
+    },
+    "paymentsAppEndPoint":"http://localhost:8002/payments/"
 }
