--- a/OrdersApp/package.json
+++ b/OrdersApp/package.json
@@ -11,12 +11,14 @@
   "author": "Ali Bazdaran",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/mssql": "^6.0.7",
     "@types/sinon": "^9.0.10",
     "awilix": "^4.3.1",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "chai": "^4.3.0",
     "express": "^4.17.1",
