--- a/AdminPanel/package.json
+++ b/AdminPanel/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^3.1.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
