--- a/PaymentsApp/package.json
+++ b/PaymentsApp/package.json
@@ -14,6 +14,7 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "mocha": "^8.2.1"
   },
